--- a/app/src/main/res/layout/activity_failed_to_add_payment.xml
+++ b/app/src/main/res/layout/activity_failed_to_add_payment.xml
@@ -31,6 +31,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_bold"
                 android:gravity="center"
+                android:textColor="@color/black"
                 android:text="Failed to Add Payment "
                 android:textSize="@dimen/_16ssp" />
 
@@ -40,6 +41,7 @@
                 android:layout_marginTop="@dimen/_21sdp"
                 android:fontFamily="@font/opensans_regular"
                 android:gravity="center"
+                android:textColor="@color/primary_black"
                 android:text="Thank you for your interest Coyni. However, we regret to inform you that your account has been deactivated."
                 android:textSize="@dimen/_12ssp"
                 android:layout_marginBottom="@dimen/_17sdp"
@@ -51,6 +53,7 @@
                 android:fontFamily="@font/opensans_regular"
                 android:gravity="center"
                 android:text="Need Help?"
+                android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp"
                 android:layout_marginBottom="@dimen/_6sdp"
                 />
