--- a/app/src/main/res/layout/activity_payment_expire_oops_btmshet.xml
+++ b/app/src/main/res/layout/activity_payment_expire_oops_btmshet.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="@dimen/_20sdp"
     android:background="@drawable/bg_core">
@@ -18,18 +18,19 @@
         />
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_22sdp"
+        android:layout_height="wrap_content"
         android:text="Oops"
-        android:textStyle="bold"
+        android:fontFamily="@font/opensans_bold"
         android:textSize="@dimen/_16ssp"
+        android:textColor="@color/black"
         android:layout_marginBottom="@dimen/_9sdp"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Seems like you have an issue with your \ncard"
-        android:textStyle="bold"
         android:textSize="@dimen/_12ssp"
+        android:fontFamily="@font/opensans_semibold"
         android:layout_marginBottom="@dimen/_27sdp"
         />
 
@@ -39,20 +40,20 @@
     android:orientation="horizontal"
        android:gravity="center"
     android:layout_marginBottom="@dimen/_20sdp">
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingLeft="@dimen/_34sdp"
-    android:paddingRight="@dimen/_34sdp"
-    android:paddingTop="@dimen/_13sdp"
-    android:paddingBottom="@dimen/_13sdp"
-    android:text="Remove"
-    android:textColor="@color/primary_color"
-    android:background="@drawable/bg_corefull"
-    android:gravity="center"
-    android:fontFamily="@font/opensans_bold"
-    android:layout_weight="1"
-    />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/_34sdp"
+            android:paddingRight="@dimen/_34sdp"
+            android:paddingTop="@dimen/_13sdp"
+            android:paddingBottom="@dimen/_13sdp"
+            android:text="Remove"
+            android:textColor="@color/primary_color"
+            android:background="@drawable/bg_corefull"
+            android:gravity="center"
+            android:fontFamily="@font/opensans_bold"
+            android:layout_weight="1"
+            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
