--- a/app/src/main/res/layout/activity_transaction_failed.xml
+++ b/app/src/main/res/layout/activity_transaction_failed.xml
@@ -18,18 +18,19 @@
             android:orientation="vertical">
 
         <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_failed"
         android:layout_marginTop="@dimen/_102sdp"
-        android:layout_marginLeft="@dimen/_64sdp"
         android:layout_marginBottom="@dimen/_35sdp"
+            android:layout_gravity="center"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Transaction Failed"
         android:gravity="center"
+        android:textColor="@color/black"
         android:fontFamily="@font/opensans_semibold"
         android:textSize="@dimen/_16ssp"
         android:layout_marginBottom="@dimen/_21sdp"
@@ -38,6 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/_12ssp"
+        android:textColor="@color/primary_black"
         android:fontFamily="@font/opensans_regular"
         android:text="The transaction failed due to error \ncode: {error code - error code \ndescription}. Please try again."
         android:gravity="center"
