--- a/app/src/main/res/layout/activity_buy_token.xml
+++ b/app/src/main/res/layout/activity_buy_token.xml
@@ -5,143 +5,229 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+
     >
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="@dimen/_21sdp"
-        android:paddingRight="@dimen/_21sdp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_45sdp"
-            android:layout_marginBottom="@dimen/_14sdp"
-            android:background="@color/white"
-            android:src="@drawable/ic_x" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_32sdp"
-            android:fontFamily="@font/opensans_bold"
-            android:text="Buy Token"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_16ssp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_16sdp"
-            android:fontFamily="@font/opensans_semibold"
-            android:text="Payment Method"
-            android:textColor="@color/primary_black"
-            android:textSize="@dimen/_12ssp" />
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingTop="@dimen/_16sdp"
-                android:paddingBottom="@dimen/_16sdp"
-                android:src="@drawable/ic__01_bank" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_weight="1"
-                android:paddingTop="@dimen/_16sdp"
-                android:paddingBottom="@dimen/_16sdp"
-                android:textColor="@color/primary_black"
-                android:fontFamily="@font/opensans_semibold"
-                android:text="Bank of America  ••••5359" />
-
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_60sdp"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:paddingTop="@dimen/_16sdp"
-                android:paddingBottom="@dimen/_16sdp"
-                android:src="@drawable/ic_chevron_right" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_7sdp"
-            android:background="@color/white"
-            android:orientation="horizontal"
+            android:layout_alignParentTop="true"
+            android:orientation="vertical"
             >
 
-            <TextView
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/_67sdp"
-                android:fontFamily="@font/opensans_bold"
-                android:gravity="center"
-                android:paddingTop="@dimen/_9sdp"
-                android:paddingBottom="@dimen/_7sdp"
-                android:text="$"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_40ssp" />
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/_21sdp"
+                android:paddingRight="@dimen/_21sdp"
+                android:background="@drawable/backgrndbtmcornrs">
 
-            <EditText
-                android:id="@+id/inputEV"
-                android:layout_width="wrap_content"
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_45sdp"
+                    android:layout_marginBottom="@dimen/_14sdp"
+                    android:background="@color/white"
+                    android:src="@drawable/ic_x" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_11sdp"
+                    android:fontFamily="@font/opensans_bold"
+                    android:text="Buy Token"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_16ssp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/opensans_bold"
-                android:hint="0.00"
-                android:inputType="number"
-                android:background="@color/white"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_53ssp"
-                />
+                android:background="#f2f4f5"
+                android:orientation="vertical">
 
-            <View
-                android:layout_width="@dimen/_1sdp"
-                android:layout_height="@dimen/_42sdp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/_5sdp"
-                android:background="@color/light_gray"
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_21sdp"
+                    android:layout_marginTop="@dimen/_32sdp"
+                    android:layout_marginRight="@dimen/_21sdp"
+                    android:layout_marginBottom="@dimen/_16sdp"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="Payment Method"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp" />
 
-                />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_21sdp"
+                    android:layout_marginRight="@dimen/_21sdp"
+                    android:layout_marginBottom="@dimen/_18sdp"
+                    android:orientation="horizontal">
 
-            <ImageView
-                android:layout_width="wrap_content"
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="@dimen/_16sdp"
+                        android:paddingBottom="@dimen/_16sdp"
+                        android:src="@drawable/ic__01_bank" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:paddingTop="@dimen/_16sdp"
+                        android:paddingBottom="@dimen/_16sdp"
+                        android:text="Bank of America  ••••5359"
+                        android:textColor="@color/primary_black" />
+
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_60sdp"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:paddingTop="@dimen/_16sdp"
+                        android:paddingBottom="@dimen/_16sdp"
+                        android:src="@drawable/ic_chevron_right" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/_7sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:src="@drawable/ic_download" />
+                android:background="#f2f4f5"
+                android:orientation="vertical">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:layout_marginRight="@dimen/_10sdp"
+                    android:layout_marginBottom="@dimen/_32sdp"
+                    android:background="@color/white"
+                    app:cardCornerRadius="@dimen/_10sdp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_17sdp"
+                            android:background="@color/white"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/goneTV"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="@dimen/_67sdp"
+                                android:fontFamily="@font/opensans_bold"
+                                android:gravity="center"
+                                android:paddingTop="@dimen/_9sdp"
+                                android:paddingBottom="@dimen/_7sdp"
+                                android:text="$"
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/_40ssp" />
+
+                            <EditText
+                                android:id="@+id/inputEV"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="@dimen/_5sdp"
+                                android:autoSizeMinTextSize="@dimen/_12ssp"
+                                android:background="@color/white"
+                                android:fontFamily="@font/opensans_bold"
+                                android:hint="0.00"
+                                android:inputType="numberDecimal"
+                                android:maxLength="15"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_53ssp" />
+
+                            <View
+                                android:layout_width="@dimen/_1sdp"
+                                android:layout_height="@dimen/_42sdp"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="@dimen/_5sdp"
+                                android:background="@color/light_gray"
+
+                                />
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="@dimen/_7sdp"
+                                android:layout_marginTop="@dimen/_8sdp"
+                                android:src="@drawable/ic_download" />
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/_1sdp"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="@dimen/_15sdp"
+                            android:layout_marginRight="@dimen/_15sdp"
+                            android:layout_marginBottom="@dimen/_32sdp"
+                            android:background="#d8e2f0" />
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
         </LinearLayout>
+
+        <!--        <LinearLayout-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:orientation="horizontal"-->
+        <!--            android:visibility="gone"-->
+        <!--            android:layout_marginTop="@dimen/_6sdp"-->
+        <!--            >-->
+        <!--            <ImageView-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:src="@drawable/ic_erro"-->
+        <!--                />-->
+        <!--            <TextView-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_marginLeft="@dimen/_9sdp"-->
+        <!--                android:text="Amount entered exceeds your daily limit"-->
+        <!--                android:textColor="@color/error_red"-->
+        <!--                android:textSize="@dimen/_12ssp"-->
+        <!--                android:fontFamily="@font/opensans_regular"-->
+        <!--                />-->
+
+
+        <!--        </LinearLayout>-->
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_1sdp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_alignParentBottom="true"
+            >
 
-            <View
+            <com.greenbox.coyni.utils.keyboards.CustomKeyboard
+                android:id="@+id/ckb"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_2sdp"
-                android:layout_gravity="center"
-                android:background="#d8e2f0" />
+                android:layout_height="wrap_content" />
         </LinearLayout>
-
-    </LinearLayout>
-
-    <com.greenbox.coyni.utils.keyboards.CustomKeyboard
-        android:id="@+id/ckb"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_123sdp"/>
+    </RelativeLayout>
 </LinearLayout>
