--- a/app/src/main/res/layout/activity_retry_create_account.xml
+++ b/app/src/main/res/layout/activity_retry_create_account.xml
@@ -42,7 +42,7 @@
             android:textSize="@dimen/_12ssp" />
     </LinearLayout>
 
-    <com.google.android.material.card.MaterialCardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/tryAgainCV"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_43sdp"
@@ -59,6 +59,6 @@
             android:textColor="@color/white"
             android:textSize="@dimen/_12ssp"
             android:textStyle="bold" />
-    </com.google.android.material.card.MaterialCardView>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
