--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -452,7 +452,7 @@
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11ssp" />
 
-                <com.google.android.material.card.MaterialCardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/nextCV"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_43sdp"
@@ -470,7 +470,7 @@
                         android:text="Next"
                         android:textColor="@color/white"
                         android:textSize="@dimen/_12ssp" />
-                </com.google.android.material.card.MaterialCardView>
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
         </ScrollView>
 
