--- a/app/src/main/res/layout/activity_enable_auth_id.xml
+++ b/app/src/main/res/layout/activity_enable_auth_id.xml
@@ -57,7 +57,7 @@
             android:layout_marginTop="50dp"
             android:orientation="vertical">
 
-            <com.google.android.material.card.MaterialCardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/enableFaceCV"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_43sdp"
@@ -75,7 +75,7 @@
                     android:text="Enable Face ID"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_12ssp" />
-            </com.google.android.material.card.MaterialCardView>
+            </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:id="@+id/layoutNotnowFace"
@@ -161,7 +161,7 @@
             android:layout_marginTop="@dimen/_50sdp"
             android:orientation="vertical">
 
-            <com.google.android.material.card.MaterialCardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/enableTouchCV"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_43sdp"
@@ -179,7 +179,7 @@
                     android:text="Enable Touch ID"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_12ssp" />
-            </com.google.android.material.card.MaterialCardView>
+            </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:id="@+id/layoutNotnow"
@@ -363,7 +363,7 @@
                 android:orientation="vertical"
                 android:padding="@dimen/_31sdp">
 
-                <com.google.android.material.card.MaterialCardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/successGetStartedCV"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_43sdp"
@@ -380,7 +380,7 @@
                         android:text="Get Started"
                         android:textColor="@color/white"
                         android:textSize="@dimen/_12ssp" />
-                </com.google.android.material.card.MaterialCardView>
+                </androidx.cardview.widget.CardView>
 
                 <TextView
                     android:id="@+id/notNowSuccessTV"
