--- a/app/src/main/res/layout/activity_failed_scenario.xml
+++ b/app/src/main/res/layout/activity_failed_scenario.xml
@@ -85,7 +85,7 @@
 
             </LinearLayout>
 
-            <com.google.android.material.card.MaterialCardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/idveriCardViewExitBtn"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_44sdp"
@@ -105,7 +105,7 @@
                     android:textSize="@dimen/_12ssp" />
 
 
-            </com.google.android.material.card.MaterialCardView>
+            </androidx.cardview.widget.CardView>
         </RelativeLayout>
 
 </LinearLayout>
