--- a/app/src/main/res/layout/activity_identity_veri_sucessful.xml
+++ b/app/src/main/res/layout/activity_identity_veri_sucessful.xml
@@ -58,7 +58,7 @@
         android:textAlignment="center"
         android:fontFamily="@font/opensans_regular"
         />
-    <com.google.android.material.card.MaterialCardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/idveriDoneBtn"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_43sdp"
@@ -78,7 +78,7 @@
             android:textSize="@dimen/_12ssp"
             android:fontFamily="@font/opensans_bold"
             />
-    </com.google.android.material.card.MaterialCardView>
+    </androidx.cardview.widget.CardView>
 
     </LinearLayout>
     </ScrollView>
