--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -217,6 +217,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layoutCrypto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -252,7 +253,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/dashboardProfileLL"
+            android:id="@+id/layoutCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
