--- a/app/src/main/res/layout/activity_crypto_assets_cmng_sn.xml
+++ b/app/src/main/res/layout/activity_crypto_assets_cmng_sn.xml
@@ -1,39 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#e5f3e5">
 
-    <ImageView
+    <LinearLayout
+        android:id="@+id/layoutClose"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="@dimen/_21sdp"
+        android:layout_marginTop="@dimen/_45sdp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_x"></ImageView>
+    </LinearLayout>
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_45sdp"
-        android:layout_marginBottom="@dimen/_14sdp"
-        android:src="@drawable/ic_x"
-        android:layout_marginLeft="@dimen/_21sdp"
-        android:layout_marginRight="@dimen/_21sdp">
-    </ImageView>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_above="@+id/imgLogo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/_20sdp"
         android:text="Crypto Assets Coming Soon…"
-        android:paddingLeft="@dimen/_10sdp"
         android:textColor="#008581"
         android:textSize="@dimen/_16sdp"
-        android:layout_marginTop="@dimen/_47sdp"
-        android:textStyle="bold"
-        android:layout_marginLeft="@dimen/_21sdp"
-        android:layout_marginRight="@dimen/_21sdp"
-        >
-    </TextView>
+        android:textStyle="bold"></TextView>
+
     <ImageView
+        android:id="@+id/imgLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_cryptoasset"
-        android:layout_marginTop="@dimen/_37sdp"
-        >
-    </ImageView>
-</LinearLayout>
+        android:layout_centerInParent="true"
+        android:src="@drawable/ic_cryptoasset"></ImageView>
+</RelativeLayout>
