--- a/app/src/main/res/layout/activity_issuing_card_cmng_sn.xml
+++ b/app/src/main/res/layout/activity_issuing_card_cmng_sn.xml
@@ -1,38 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/_21sdp"
     android:background="#e5f3e5"
-    >
+    android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_44sdp"
-        android:layout_marginRight="@dimen/_21sdp"
-        android:layout_marginBottom="@dimen/_14sdp"
-        android:src="@drawable/ic_x">
+    <LinearLayout
+        android:id="@+id/layoutClose"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="@dimen/_21sdp"
+        android:layout_marginTop="@dimen/_23sdp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
-    </ImageView>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_x" />
+    </LinearLayout>
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Issuing Card Coming Soon…"
-        android:layout_marginTop="@dimen/_61sdp"
-        android:paddingLeft="@dimen/_14sdp"
-        android:textColor="@color/primary_color"
-        android:textSize="@dimen/_16ssp"
-        android:fontFamily="@font/opensans_bold"
-        />
-    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/issuecard"
-        android:layout_marginTop="@dimen/_37sdp"
-        />
+        android:layout_above="@+id/imgLogo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/_10sdp"
+        android:fontFamily="@font/opensans_bold"
+        android:text="Issuing Card Coming Soon…"
+        android:textColor="@color/primary_color"
+        android:textSize="@dimen/_16ssp" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/imgLogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:src="@drawable/issuecard" />
+
+</RelativeLayout>
